source/sass/modules/organisms/_header.sass
//============================================
// Header
//============================================

// Header elements
//============================================

.header
  position: relative
  top: 0
  z-index: 3
  width: 100%
  padding: $space-half 0 10px 0
  background-color: $white
  transition: all .5s $motion
  box-shadow: 0px 2px 12px -6px rgba(0,0,0,0.75)
  +mq($bp-lg)
    padding: $space-half 0 $space-half 0

.header.is-open
  .gridItem_label
    color: $white

.header_inner
  position: relative
  display: flex
  justify-content: space-between
  align-items: center
  +mq($bp-lg)
    justify-content: flex-start


// Logo
//============================================

.logo
  display: flex
  flex-shrink: 0;
  margin: 0 70px 0 0
  width: 65px
  height: 40px
  +mq($bp-lg)
    height: 44px


// Utility services and search buttons
//============================================

.utility
  display: flex
  flex-shrink: 0
  padding-top: 8px

.utility_search
  flex-shrink: 0
  width: 22px
  height: 22px
  background-image: url('../images/unibz-search-black.svg')
  background-size: contain
  background-position: center
  background-repeat: no-repeat


// Navigations Desktop
//============================================

.mainNav
  display: none
  flex: 1
  padding-top: 8px
  +mq($bp-lg)
    display: block


// Navigations Wrappers
//============================================

.navSecondary_wrapper
  .nav_item
    margin-right: $space*1.5

.navSecondary_wrapper,
.navLinks_wrapper,
.navGrid_wrapper
  background-color: $primary
  .navSecondary,
  .navLinks,
  .navGrid
    max-height: 0
    overflow: hidden
    transition: max-height .5s $motion, padding .5s $motion, opacity .75s $motion
    padding-left: 135px
    color: $white
    opacity: 0

  .navSecondary.is-open,
  .navLinks.is-open,
  .navGrid.is-open
    opacity: 1

  .navSecondary.is-open
    padding-top: $space*1.5
    padding-bottom: $space*1.5
    max-height: 96px

  .navLinks.is-open
    padding-top: $space
    padding-bottom: $space
    max-height: 336px

  .navGrid.is-open
    padding-bottom: $space
    max-height: 383px
    +mq($bp-xl)
      max-height: 358px


// Navigation Mobile Wrapper
//============================================

.navMobile_wrapper
  display: none
  background-color: $primary
  color: $white  
  &.is-open
    display: block
  .navMobile_item::after
    border-top-color: $white
  .navMobile_label
    color: $white


// Hamburger icon
//============================================

.utility_hamburger
  position: relative
  margin-left: $space
  width: 22px
  height: 22px
  cursor: pointer
  +mq($bp-lg)
    display: none

.burger
  position: absolute
  top: 50%
  transform: translateY(-50%)
  width: 100%
  height: 3px
  background-color: $black
  transition: all 500ms $motion

.burger::before,
.burger::after
  content: ""
  position: absolute
  width: 100%
  height: 3px
  background-color: $black
  transition: all 500ms $motion

.burger::before
  margin-top: -9px

.burger::after
  margin-top: 9px

.header.is-open .burger,
.header.is-open .burger::before,
.header.is-open .burger::after
  background-color: $white

.utility_hamburger.is-open
  .burger
    background-color: transparent
  .burger::before
    margin: 0
    transform: rotate(45deg)
  .burger::after
    margin: 0
    transform: rotate(-45deg)


// Theme Colors for Navigations Wrappers
//============================================

.t_dsgn
  .navSecondary_wrapper,
  .navLinks_wrapper,
  .navGrid_wrapper,
  .navMobile_wrapper
    background-color: $dsgn

.t_eco
  .navSecondary_wrapper,
  .navLinks_wrapper,
  .navGrid_wrapper,
  .navMobile_wrapper
    background-color: $eco

.t_edu
  .navSecondary_wrapper,
  .navLinks_wrapper,
  .navGrid_wrapper,
  .navMobile_wrapper
    background-color: $edu

.t_comp
  .navSecondary_wrapper,
  .navLinks_wrapper,
  .navGrid_wrapper,
  .navMobile_wrapper
    background-color: $comp

.t_tech
  .navSecondary_wrapper,
  .navLinks_wrapper,
  .navGrid_wrapper,
  .navMobile_wrapper
    background-color: $tech

.t_library
  .navSecondary_wrapper,
  .navLinks_wrapper,
  .navGrid_wrapper,
  .navMobile_wrapper
    background-color: $library

